[package]
name = "arloader"
authors = ["calebeverett <caleb@calebeverett.io>"]
description = "Command line application and library for uploading files to Arweave."
version = "0.1.47"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CalebEverett/arloader"
documentation = "https://docs.rs/arloader/latest/arloader/"
keywords = ["arweave", "nft", "metaplex", "solana", "upload"]
categories = ["api-bindings", "command-line-utilities", "filesystem"]

[lib]
name = "arloader"
path = "src/lib.rs"

[profile.release]
lto = true

[dependencies]
avro-rs = "0.13"
bs58 = "0.4.0"
base64 = "0.13.0"
bincode = "1.3.3"
borsh = "0.9.1"
blake3 = "1.2.0"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.34"
dirs-next = "2.0.0"
env_logger = "0.9.0"
futures = "0.3.17"
glob = "0.3.0"
infer = { version = "0.5.0", default-features = false }
jsonwebkey = { version = "0.3.4", features = [ "pkcs-convert" ] }
log = "0.4.14"
matches = "0.1.9"
mime_guess = "2.0.3"
num-bigint = { version = "0.4.2", features = [ "serde" ] }
num-traits = "0.2.14"
rayon = "1.5.1"
ring = {version = "0.16.20", features = [ "std" ] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = { version = "1.0.68", features = ["preserve_order"] }
solana-sdk = "1.8.2"
thiserror = "1.0.30"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros", ] }
url = "2.2.2"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_futures", "async_tokio", "html_reports"] }
image = "0.23.14"
imageproc = "0.22.0"
num-complex = "0.4.0"
rand = "0.8.4"
rusttype = "0.9.2"
tempdir = "0.3"

[[bench]]
name = "benchmark"
harness = false
